name:                quic
version:             0.0.0
synopsis:            QUIC
description:         Library for A UDP-Based Multiplexed and Secure Transport
license:             BSD3
license-file:        LICENSE
author:              Kazu Yamamoto
maintainer:          kazu@iij.ad.jp
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:  ChangeLog.md
cabal-version:       >= 1.10

library
  exposed-modules:     Network.QUIC
                       Network.QUIC.Internal
  other-modules:
                       Network.QUIC.Client
                       Network.QUIC.Config
                       Network.QUIC.Connection
                       Network.QUIC.Connection.Crypto
                       Network.QUIC.Connection.Migration
                       Network.QUIC.Connection.Misc
                       Network.QUIC.Connection.PacketNumber
                       Network.QUIC.Connection.Queue
                       Network.QUIC.Connection.Role
                       Network.QUIC.Connection.State
                       Network.QUIC.Connection.Stream
                       Network.QUIC.Connection.StreamTable
                       Network.QUIC.Connection.Types
                       Network.QUIC.Connector
                       Network.QUIC.Exception
                       Network.QUIC.Handshake
                       Network.QUIC.Info
                       Network.QUIC.IO
                       Network.QUIC.Imports
                       Network.QUIC.Logger
                       Network.QUIC.Packet
                       Network.QUIC.Packet.Decode
                       Network.QUIC.Packet.Decrypt
                       Network.QUIC.Packet.Encode
                       Network.QUIC.Packet.Frame
                       Network.QUIC.Packet.Header
                       Network.QUIC.Packet.Number
                       Network.QUIC.Packet.Token
                       Network.QUIC.Packet.Version
                       Network.QUIC.Parameters
                       Network.QUIC.Qlog
                       Network.QUIC.Receiver
                       Network.QUIC.Recovery
                       Network.QUIC.Recovery.Constants
                       Network.QUIC.Recovery.LossRecovery
                       Network.QUIC.Recovery.Misc
                       Network.QUIC.Recovery.PeerPacketNumbers
                       Network.QUIC.Recovery.Types
                       Network.QUIC.Run
                       Network.QUIC.Sender
                       Network.QUIC.Server
                       Network.QUIC.Socket
                       Network.QUIC.Stream
                       Network.QUIC.Stream.Misc
                       Network.QUIC.Stream.Queue
                       Network.QUIC.Stream.Reass
                       Network.QUIC.Stream.Table
                       Network.QUIC.Stream.Types
                       Network.QUIC.TLS
                       Network.QUIC.TLS.Crypto
                       Network.QUIC.TLS.Handshaker
                       Network.QUIC.Timeout
                       Network.QUIC.Types
                       Network.QUIC.Types.Ack
                       Network.QUIC.Types.CID
                       Network.QUIC.Types.Constants
                       Network.QUIC.Types.Error
                       Network.QUIC.Types.Frame
                       Network.QUIC.Types.Integer
                       Network.QUIC.Types.Packet
                       Network.QUIC.Types.Queue
                       Network.QUIC.Types.Resumption
                       Network.QUIC.Types.Time
                       Network.QUIC.Types.UserError
                       Network.QUIC.Utils
  -- other-extensions:
  build-depends:       base >= 4.7 && < 5
                     , array
                     , base16-bytestring
                     , bytestring
                     , containers
                     , crypto-token
                     , cryptonite
                     , data-default-class
                     , fast-logger
                     , filepath
                     , iproute >= 1.7.8
                     , memory
                     , network >= 3.1.2
                     , network-byte-order >= 0.1.5
                     , psqueues
                     , stm
                     , tls
                     , unix-time
                     , x509
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat
  default-extensions:  Strict StrictData

test-suite spec
  Type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -threaded
  main-is:              Spec.hs
  other-modules:        Config
                        HandshakeSpec
                        IOSpec
                        PacketSpec
                        TLSSpec
                        TypesSpec
  build-depends:        base >= 4 && < 5
                      , QuickCheck
                      , async
                      , base16-bytestring
                      , bytestring
                      , cryptonite
                      , hspec
                      , network >= 3.1.2
                      , quic
                      , tls

test-suite doctests
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  main-is:              doctests.hs

  build-depends:        base >= 4.7 && < 5
                      , doctest >= 0.10.1

  ghc-options: -Wall
